kubernetes/network-policy/standard/ingress-to-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-system
  namespace: ingress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata: ism-system
        - podSelector:
            matchLabels:
              app: auth-service
      ports:
        - protocol: TCP
          port: 8081
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata: ism-system
        - podSelector:
            matchLabels:
              app: map-router
      ports:
        - protocol: TCP
          port: 8082
