kubernetes/network-policy/standard/postgres-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-system
          podSelector:
            matchLabels:
              app: auth-service
      ports:
        - protocol: TCP
          port: 5432
