kubernetes/network-policy/standard/redis-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: database
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ism-system
          podSelector:
            matchLabels:
              app: map-router
      ports:
        - protocol: TCP
          port: 6379
